fix: restore vertical alignment by flex-box, fix a bug when no specified height make vertical alignm

--- a/assets/button/index.sass
+++ b/assets/button/index.sass
@@ -34,6 +34,7 @@
 
 .button-text
   @extend .button-basis
+  background-color: $background-white
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12)
 
   +btn-shadow($text, rgba(0, 0, 0, .04))
