--- a/assets/sass/mixins.sass
+++ b/assets/sass/mixins.sass
@@ -13,7 +13,8 @@
     box-shadow: 0 1px 3px 1px rgba(60, 64, 67, .2), 0 2px 8px 4px rgba(60, 64, 67, .1)
 
 =shadow-wrapper
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .2), 0 1px 20px 0 rgba(0, 0, 0, .2), 0 2px 5px -1px rgba(0, 0, 0, .2)
+  // box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .2), 0 1px 20px 0 rgba(0, 0, 0, .2), 0 2px 5px -1px rgba(0, 0, 0, .2)
+  box-shadow: 0 1px 8px 0 rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12)
 
 =catalog-header
   /deep/ .catalog-text
