--- a/assets/sass/var/derived.sass
+++ b/assets/sass/var/derived.sass
@@ -6,6 +6,7 @@
 // background color
 $background-dark: $pr-900
 $background-white: $white
+$background-white-bis: $white-bis
 $background-grey: $grey-lighter
 
 // text color
